<resources>
    <string name="app_name" translatable="false">SlashBubble_tp_android</string>
    <string name="title" translatable="false">Slash Bubble</string>

    <!-- Button name -->
    <string name="start_button">Start</string>
    <string name="button_shop">Shop</string>
    <string name="credit_button">Credit</string>
    <string name="quit_button">Quit</string>
    <string name="sound_checkbox">Sound</string>
    <string name="back_button">Back</string>

    <!-- Language -->
    <string name="fr_language">French</string>
    <string name="en_language">English</string>

    <!-- Alert Message -->
    <string name="alert_quit_message">Are you sure you want to quit the app?</string>
    <string name="alert_change_localisation">Enter your new localisation</string>
    <string name="warning">Warning !</string>
    <string name="hello_world">Hello !</string>
    <string name="modification" translatable="false">Modification !</string>
    <string name="quit">Quit</string>

    <!-- Set User Name Message -->
    <string name="set_user_name">Set your name here !</string>
    <string name="valid">Valid</string>

    <!-- Color -->
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>

    <!-- Game event -->
    <string name="resume">resume</string>
    <string name="pause" translatable="false">pause</string>
    <string name="gameOver" translatable="false">Game Over</string>

    <!-- Game over layout -->
    <string name="the_best_name">The best :</string>
    <string name="score" translatable="false">score</string>
    <string name="the_time">Time :</string>

    <!-- Credit -->
    <string name="your_meteo">Your meteo :</string>
    <string name="language">language</string>
    <string name="localisation">localisation</string>

    <!-- Shop -->
    <string name="default_package">Default</string>
    <string name="stone_package">Precious stone</string>
    <string name="choose_your_bubble_text">Choose your bubble !</string>

</resources>