<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgroundgame">

    <LinearLayout
        android:id="@+id/layoutUser"
        android:layout_width="260dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="user name"
            android:textSize="30dp"/>

        <ImageButton
            android:id="@+id/btnModifyUserName"
            android:layout_width="67dp"
            android:layout_height="70dp"
            android:background="@drawable/questionbtn"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnSetting"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:background="@drawable/settingsbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/layoutUser"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532dp"
        android:singleLine="true"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="195dp"
        android:layout_height="298dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/window"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:text="@string/start_button"
            android:textColor="@color/white"
            android:background="@drawable/backgroundbutton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShop"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:text="@string/button_shop"
            android:textColor="@color/white"
            android:background="@drawable/backgroundbutton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCredit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:text="@string/credit_button"
            android:textColor="@color/white"
            android:background="@drawable/backgroundbutton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnQuit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:text="@string/quit_button"
            android:textColor="@color/white"
            android:background="@drawable/backgroundbutton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>