<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.GameActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPause"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_credit"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:fontFamily="@font/ethnocentric_rg_it"
            android:text="@string/pause"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/resume"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/resume"
            android:layout_width="186dp"
            android:layout_height="59dp"
            android:layout_marginBottom="236dp"
            android:onClick="resume"
            android:text="@string/resume"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGameOver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textGameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/ethnocentric_rg_it"
            android:text="@string/gameOver"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/layoutBestScore"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/layoutBestScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/quit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ethnocentric_rg_it"
                android:text="@string/the_best_name"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/textUserNameBestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ethnocentric_rg_it"
                android:text="name"
                android:textColor="@color/purple_200"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ethnocentric_rg_it"
                android:text="@string/score"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/textBestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ethnocentric_rg_it"
                android:text="0"
                android:textColor="@color/yellow"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ethnocentric_rg_it"
                android:text="@string/the_time"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/textBestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ethnocentric_rg_it"
                android:textColor="@color/blue"
                android:textSize="25sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:onClick="quit"
            android:text="@string/quit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInterfaceGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundgame">

        <LinearLayout
            android:id="@+id/layoutTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/clockicon" />

            <Space
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="600dp"
                android:fontFamily="@font/ethnocentric_rg_it"
                android:text="timer"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/backgroundtextview"
            android:fontFamily="@font/ethnocentric_rg_it"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/layoutTimer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/colorText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="406dp"
            android:background="@drawable/backgroundtextview"
            android:fontFamily="@font/ethnocentric_rg_it"
            android:text="COLOR"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:background="@drawable/pausebtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/containerImage"
            android:layout_width="350dp"
            android:layout_height="76dp"
            android:layout_marginBottom="72dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/firstImage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_violet"
                android:transitionName="@string/purple" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/secondImage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_blue"
                android:transitionName="@string/blue" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/thirdImage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_green"
                android:transitionName="@string/green" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>