<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="credit.CreditActivity"
    android:background="@drawable/background_credit">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/textMeteo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textMeteo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/ethnocentric_rg_it"
        android:textAlignment="center"
        android:text="@string/your_meteo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/white"
        android:text="@string/back_button"
        android:textColor="@color/black"
        android:onClick="onBack"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:background="@drawable/window"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/creditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/credit_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/ethnocentric_rg_it"
            />

        <TextView
            android:id="@+id/textCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/ethnocentric_rg_it"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>